widget/cocoa/nsMenuBarX.h
@@ -16,7 +16,6 @@
 #include "nsString.h"
 
 class nsMenuX;
-class nsMenuBarX;
 class nsIWidget;
 class nsIContent;
 
@@ -34,26 +33,11 @@ protected:
   virtual ~nsNativeMenuServiceX() {}
 };
 
-@interface NSMenu (Undocumented)
-// Undocumented method, present unchanged since OS X 10.6, used to temporarily
-// highlight a top-level menu item when an appropriate Cmd+key combination is
-// pressed.
-- (void)_performActionWithHighlightingForItemAtIndex:(NSInteger)index;
-@end
-
 // Objective-C class used to allow us to intervene with keyboard event handling.
 // We allow mouse actions to work normally.
 @interface GeckoNSMenu : NSMenu
 {
-@private
-  nsMenuBarX *mMenuBarOwner; // Weak -- if non-null it owns us
-  bool mDelayResignMainMenu;
 }
-- (id)initWithTitle:(NSString *)aTitle andMenuBarOwner:(nsMenuBarX *)aMenuBarOwner;
-- (void)resetMenuBarOwner;
-- (bool)delayResignMainMenu;
-- (void)setDelayResignMainMenu:(bool)aShouldDelay;
-- (void)delayedPaintMenuBar:(id)unused;
 @end
 
 // Objective-C class used as action target for menu items
@@ -97,7 +81,6 @@ public:
 
   static NativeMenuItemTarget* sNativeEventTarget;
   static nsMenuBarX*           sLastGeckoMenuBarPainted;
-  static nsMenuBarX*           sCurrentPaintDelayedMenuBar;
 
   // The following content nodes have been removed from the menu system.
   // We save them here for use in command handling.
@@ -120,9 +103,7 @@ public:
   nsMenuX*          GetMenuAt(uint32_t aIndex);
   nsMenuX*          GetXULHelpMenu();
   void              SetSystemHelpMenu();
-  nsresult          Paint(bool aDelayed = false);
-  void              PaintMenuBarAfterDelay();
-  void              ResetAwaitingDelayedPaint() { mAwaitingDelayedPaint = false; }
+  nsresult          Paint();
   void              ForceUpdateNativeMenuAt(const nsAString& indexString);
   void              ForceNativeMenuReload(); // used for testing
   static char       GetLocalizedAccelKey(const char *shortcutID);
@@ -142,8 +123,6 @@ protected:
   nsTArray< nsAutoPtr<nsMenuX> > mMenuArray;
   nsIWidget*         mParentWindow;        // [weak]
   GeckoNSMenu*       mNativeMenu;            // root menu, representing entire menu bar
-
-  bool               mAwaitingDelayedPaint;
 };
 
 #endif // nsMenuBarX_h_
